2006-09-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/copyright:
	* hildon-widgets-plugins/hildon-color-chooser-dialog-hsv.c:
	* hildon-widgets-plugins/hildon-color-chooser-hsv.c:
	* hildon-widgets/gtk-infoprint.c:
	* hildon-widgets/gtk-infoprint.h:
	* hildon-widgets/hildon-add-home-dialog.c:
	* hildon-widgets/hildon-add-home-dialog.h:
	* hildon-widgets/hildon-app-private.h:
	* hildon-widgets/hildon-app.c:
	* hildon-widgets/hildon-app.h:
	* hildon-widgets/hildon-appview.c:
	* hildon-widgets/hildon-appview.h:
	* hildon-widgets/hildon-banner.c:
	* hildon-widgets/hildon-banner.h:
	* hildon-widgets/hildon-calendar-popup.c:
	* hildon-widgets/hildon-calendar-popup.h:
	* hildon-widgets/hildon-caption.c:
	* hildon-widgets/hildon-caption.h:
	* hildon-widgets/hildon-code-dialog.c:
	* hildon-widgets/hildon-code-dialog.h:
	* hildon-widgets/hildon-color-button.c:
	* hildon-widgets/hildon-color-button.h:
	* hildon-widgets/hildon-color-chooser-button.c:
	* hildon-widgets/hildon-color-chooser-button.h:
	* hildon-widgets/hildon-color-chooser-dialog.c:
	* hildon-widgets/hildon-color-chooser-dialog.h:
	* hildon-widgets/hildon-color-chooser.c:
	* hildon-widgets/hildon-color-chooser.h:
	* hildon-widgets/hildon-color-popup.c:
	* hildon-widgets/hildon-color-popup.h:
	* hildon-widgets/hildon-color-selector.c:
	* hildon-widgets/hildon-color-selector.h:
	* hildon-widgets/hildon-composite-widget.c:
	* hildon-widgets/hildon-composite-widget.h:
	* hildon-widgets/hildon-controlbar.c:
	* hildon-widgets/hildon-controlbar.h:
	* hildon-widgets/hildon-date-editor.c:
	* hildon-widgets/hildon-date-editor.h:
	* hildon-widgets/hildon-defines.c:
	* hildon-widgets/hildon-defines.h:
	* hildon-widgets/hildon-dialoghelp.c:
	* hildon-widgets/hildon-dialoghelp.h:
	* hildon-widgets/hildon-file-handling-note.c:
	* hildon-widgets/hildon-file-handling-note.h:
	* hildon-widgets/hildon-find-toolbar.c:
	* hildon-widgets/hildon-find-toolbar.h: